starting to change over to kickstart name
Former-commit-id: 5ca474845b7fc72212b51078bf1592af6ba91c50

--- a/lib/jade/layout.jade
+++ b/lib/jade/layout.jade
@@ -28,10 +28,10 @@ html(lang='en')
           li
 
             // You're welcome to remove this logo, but we'd appreciate it if you'd link to us.
-            // The more involvement from the community, the better Kickstrap works for you.
+            // The more involvement from the community, the better Kickstart works for you.
 
-            a(href="http://getkickstrap.com") Powered by 
-              span.kickstrap-logo Kickstrap
+            a(href="http://getkickstart.com") Powered by 
+              span.kickstrap-logo Kickstart
 
     script(src="//cdn.firebase.com/v0/firebase.js")
     script(src='js/kickstrap.js')
