--- a/lib/jade/layout.jade
+++ b/lib/jade/layout.jade
@@ -1,50 +1,7 @@
 doctype html
 html(lang='en')
   head
-    meta(charset='utf8')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge, chrome=1')
-    meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no")
-    meta(name='description', content='The Elegant Frontend Framework')
-    meta(name='author', content= 'Adam Kochanowicz')
-    script(src='https://jspm.io/system@0.4.js')
-    link(rel="stylesheet", href="css/main.css")
-    title 
-      | #{title}
-      block title
+    link(rel="stylesheet" href="/css/style.css")
   body
-    #sf-wrap
-      block variables
-      block content
-      #sf-push
-    section#sf-footer.navbar.navbar-inverse.navbar-static-top
-      .container
-        ul.nav.navbar-nav
-          li
-
-            // Copyright: Edit this in app.coffee
-            a(href="#") &copy; #{yourname}
-
-        ul.nav.navbar-nav.pull-right
-          li
-
-            // You're welcome to remove this logo, but we'd appreciate it if you'd link to us.
-            // The more involvement from the community, the better Kickstart works for you.
-
-            a(href="http://getkickstart.com") Powered by 
-              span.kickstrap-logo Kickstart
-
-    script(src="//cdn.firebase.com/v0/firebase.js")
-    script(src='js/kickstrap.js')
-    script.
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-1315296-20', 'getkickstrap.com');
-      ga('send', 'pageview');
-      k$.ready(function() {
-        jspm.import('ks:advertisements')
-        k$.demoStylesheet = function() { $('#main-stylesheet').remove(); }
-      })
-    block foot
+    block content
+    script(src="/js/kickstrap.js")
