CSS fully linked
Former-commit-id: ca10190b1d9f113ffab7e1d6e37d5d7ba913ec55

--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -1,5 +1,10 @@
 extends layout
 
 block content
-  h1 Kickstart 3
-  h2 Formerly Kickstrap
+  .row
+    main.mainpane
+      h1 Kickstart 3
+      h2 Formerly Kickstrap
+
+    aside.sidebar
+      h3 Sidebar
