happy place with the css
Former-commit-id: 96303fc130f34ee148ef2e36abf3363dc1be92d8

--- a/lib/sass/kickstrap.sass
+++ b/lib/sass/kickstrap.sass
@@ -1,14 +1,18 @@
-@import ../../node_modules/flexbox-grid/grid
-@import ../../node_modules/normalize-sass/normalize
+// Components
+@import _base
+@import _buttons
 
 body
   +grid-container
 
 .row
-  +grid-row
+  +ks-row
 
 .mainpane
-  +grid-column('twothirds')
+  +ks-column('twothirds')
 
 .sidebar
-  +grid-column('third')
+  +ks-column('third')
+
+button
+  +ks-button
