adding button test
Former-commit-id: 255ce3a396f36e78e50018d88f00a4db40945c67

--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -6,7 +6,14 @@ block content
       h1 Kickstart 3
       h2 Formerly Kickstrap
 
+      article
+        h3 tl;dr
+        p Kickstart is a front-end framework designed for clean HTML on modern browsers.
+
     aside.sidebar
-      h3 Sidebar
-      button Button
-      button Button
+      h3 Table of Contents
+      ul
+        li
+          a(href="#") tl;dr
+        li
+          a(href="#") About
