integrating old startcss code
Former-commit-id: 5f427bc7a6f9a808de8c7a5f9ac526340cc8e81a

--- a/lib/sass/kickstrap.sass
+++ b/lib/sass/kickstrap.sass
@@ -1,6 +1,10 @@
 // Components
-@import _base
-@import _buttons
+@import utilities/_base
+@import utilities/_mixins
+@import components/_buttons
+@import components/_tables
+@import components/_forms
+@import components/_tiles
 
 body
   +grid-container
