--- a/lib/sass/utilities/_base.sass
+++ b/lib/sass/utilities/_base.sass
@@ -23,3 +23,5 @@ $gray:           #E0ECFE  // 5
 $dark-gray:      #7f7f7f  // 6
 $darker-gray:    #5d5d5d  // 7
 $darkest-gray:   #333     // 8
+
+$space: 25px
