--- a/lib/sass/components/_forms.sass
+++ b/lib/sass/components/_forms.sass
@@ -1,5 +1,3 @@
-$space: 25px
-
 label
   display: block
   font-weight: 500
@@ -15,7 +13,7 @@ input[type="number"]
   padding: 5px
   border: 1px solid #CCC
   display: block
-  @include border-radius(3px)
+  border-radius: 3px
   label + &
     margin-top: ($space/5)
 
