Implementing theme structuring
Former-commit-id: 44f5c941e978f4c042a2836f5d0ea274898c0fb3

--- a/lib/sass/components/_forms.sass
+++ b/lib/sass/components/_forms.sass
@@ -13,7 +13,7 @@ input[type="number"]
   padding: 5px
   border: 1px solid #CCC
   display: block
-  border-radius: 3px
+  +border-radius(3px)
   label + &
     margin-top: ($space/5)
 
