--- a/lib/sass/components/_tiles.sass
+++ b/lib/sass/components/_tiles.sass
@@ -16,7 +16,7 @@
     @if $color == transparent
       color: $black
 
-  .s-close
+  .ks-close
     text-decoration: none
     color: $gray
     font-weight: bold
