--- a/lib/sass/kickstrap.sass
+++ b/lib/sass/kickstrap.sass
@@ -1,22 +1,24 @@
 // Components
 @import utilities/_base
-@import utilities/_mixins
 @import components/_buttons
 @import components/_tables
 @import components/_forms
 @import components/_tiles
 
+// Theme
+@import themes/_default
+
 body
-  +grid-container
+  +container
 
 .row
-  +ks-row
+  +row
 
 .mainpane
-  +ks-column('twothirds')
+  +column('twothirds')
 
 .sidebar
-  +ks-column('third')
+  +column('third')
 
 button
-  +ks-button
+  +button
