--- a/lib/jade/layout.jade
+++ b/lib/jade/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
   head
-    link(rel="stylesheet" href="/css/kickstrap.css")
+    link(rel="stylesheet" href="/css/docs.css")
   body
     block content
     script(src="/js/kickstrap.js")
