Got everything I need from startcss
Former-commit-id: cb88efc5ccb8d9ff1670364b967a8d38eaaf80eb

--- a/lib/sass/components/_tables.sass
+++ b/lib/sass/components/_tables.sass
@@ -2,11 +2,11 @@
   border-collapse: collapse
   border-spacing: 0
   empty-cells: show
-  border: 1px solid $lightGrey
+  border: 1px solid $light-gray
   width: 100%
 
   thead
-    background: $lightGrey
+    background: $light-gray
     color: $black
     text-align: left
     vertical-align: bottom
@@ -15,7 +15,7 @@
 
   th, td
     background-color: transparent
-    border-left: 1px solid $lightGrey
+    border-left: 1px solid $light-gray
     border-width: 0 0 0 1px
     font-size: inherit
     margin: 0
@@ -26,4 +26,4 @@
       border-left-width: 0
 
   tbody tr:nth-child(2n)
-    background-color: lighten($gray-light, 50%)
+    background-color: lighten($light-gray, 50%)
