--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -1,5 +1,11 @@
+/*
+ *  Docs
+ *  ====
+ *  Generation of css for the getkickstart.com homepage.
+ */
+
 // First load Kickstrap
-@import _kickstrap
+@import _kickstart
 
 // Then the theme
 @import themes/_default
