--- a/lib/sass/components/_tiles.sass
+++ b/lib/sass/components/_tiles.sass
@@ -1,5 +1,5 @@
-=tile-default ($color: $darkGrey)
-  box-shadow: 0px 0px 3px $grey
+=tile-default ($color: $dark-gray)
+  box-shadow: 0px 0px 3px $gray
   background-color: white
 
   @if $color == transparent
