--- a/lib/sass/_kickstart.sass
+++ b/lib/sass/_kickstart.sass
@@ -8,6 +8,8 @@
 // Components
 @import utilities/_base
 @import components/_buttons
-@import components/_tables
 @import components/_forms
+@import components/_progress
+@import components/_tables
 @import components/_tiles
+@import components/_typography
