--- a/lib/jade/layout.jade
+++ b/lib/jade/layout.jade
@@ -3,6 +3,8 @@ html(lang='en')
   head
     link(rel="stylesheet" href="/css/docs.css")
   body
+    include _header
+    
     .row
       main.mainpane
         h1 Kickstart 3
