wrapping up with docs
Former-commit-id: 94da51aac05b628ac6935ffd6e7338d2064067ea

--- a/lib/jade/docs/index.jade
+++ b/lib/jade/docs/index.jade
@@ -20,4 +20,11 @@ block sidebar
     li
       a(href="/docs/") Quickstart
     li
-      a(href="/docs/theming") Theming
+      a(href="/docs/theming/") Theming
+    li
+      | UI
+      ul
+        li
+          a(href="/docs/ui/") Base styles
+        li
+          a(href="/docs/ui/buttons") Buttons
