Adding some content
Former-commit-id: 9c851c6d07350730bd646cb30029d52ed42b4f7b

--- a/lib/jade/docs/index.jade
+++ b/lib/jade/docs/index.jade
@@ -13,8 +13,11 @@ block sidebar
     input(type="checkbox" checked)
     |  Advanced (semantic)
   label.checkbox
+    input(type="checkbox" checked)
+    |  Sass
+  label.checkbox
     input(type="checkbox")
-    |  CSS only
+    |  jQuery
 
   ul
     li
@@ -28,3 +31,7 @@ block sidebar
           a(href="/docs/ui/") Base styles
         li
           a(href="/docs/ui/buttons") Buttons
+        li
+          a(href="/docs/ui/colors") Colors
+    li
+      a(href="/docs/philosophy/") Philosophy
