--- a/lib/sass/_kickstart.sass
+++ b/lib/sass/_kickstart.sass
@@ -9,6 +9,7 @@
 @import utilities/_base
 @import components/_buttons
 @import components/_forms
+@import components/_nav
 @import components/_progress
 @import components/_tables
 @import components/_tiles
