--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -23,6 +23,18 @@
 =form-group()
   +form-group-default()
 
+// NAVIGATION
+// ----------
+
+=navbar()
+  +navbar-default()
+
+// STATUSES
+// --------
+
+=status()
+  +status-default()
+
 // TABLE
 // -----
 
