--- a/lib/sass/utilities/_base.sass
+++ b/lib/sass/utilities/_base.sass
@@ -19,12 +19,15 @@ $white:          #fff     // 1
 $lightest-gray:  #eee     // 2
 $lighter-gray:   #d4d4d4  // 3
 $light-gray:     #bbb     // 4
-$gray:           #E0ECFE  // 5
+$gray:           #999     // 5
 $dark-gray:      #7f7f7f  // 6
 $darker-gray:    #5d5d5d  // 7
 $darkest-gray:   #333     // 8
 
 $space: 25px
+
+$navbarPadding:     8.5px
+$navbarItemPadding: 5px
 
 // Other utilities
 @import _mixins
