--- a/lib/jade/docs/index.jade
+++ b/lib/jade/docs/index.jade
@@ -5,7 +5,20 @@ block mainpane
 
   block doc-article
     h4 Quickstart
-    p Lorem ipsum dolor
+    p Choose how you'd like to get started
+    ul
+      li
+        a(href="#") Barebones
+        ul
+          li Just use the CSS/JS file
+      li
+        a(href="#") Dependency-managed
+        ul
+          li Use in another framework like Rails or Express
+      li
+        a(href="#") Full build environment
+        ul
+          li Use our Gulp-powered compilation boilerplate
 
 block sidebar
   h3 Table of Contents
@@ -33,5 +46,7 @@ block sidebar
           a(href="/docs/ui/buttons") Buttons
         li
           a(href="/docs/ui/colors") Colors
+        li
+          a(href="/docs/ui/typography") Typography
     li
       a(href="/docs/philosophy/") Philosophy
