--- a/lib/jade/docs/philosophy/index.jade
+++ b/lib/jade/docs/philosophy/index.jade
@@ -13,3 +13,13 @@ block doc-article
       | Customizable by design
       ul
         li The design of the Kickstart compilation system encourages creating themes by treating component styles as extensible classes.
+    li
+      | Optimized for specific use cases.
+      ul
+        li
+          | Kickstart recognizes three main areas for website design
+          ul
+            li Applications
+            li Content
+            li Marketing
+        li Compatible in popular backend frameworks as well as plain HTML.
