--- a/lib/sass/components/_nav.sass
+++ b/lib/sass/components/_nav.sass
@@ -7,6 +7,7 @@
   width: 100%
   padding: 0 ($navbarPadding - $navbarItemPadding)
   background: $lightest-gray
+  margin-bottom: $space
 
   a
     color: $gray
