--- a/lib/sass/components/_typography.sass
+++ b/lib/sass/components/_typography.sass
@@ -11,3 +11,47 @@
 =code-default
   margin-bottom: 0px
   padding: 0 (($space/5)/3)
+
+=p-default($content-optimized)
+  font-size: 1rem
+  margin-bottom: 1.5rem
+
+  @if ($content-optimized)
+    font-size: 1.25rem
+    line-height: 1.65rem
+
+h1, h2, h3, h4, h5, h6, p
+  margin: 0
+  line-height: normal
+
+=xxl-heading-default
+  font-size: 2rem
+  margin-bottom: 1.65rem
+
+=xl-heading-default
+  font-size: 1.85rem
+  margin-bottom: 1.5rem
+
+=lg-heading-default
+  font-size: 1.65rem
+  margin-bottom: 1.25rem
+
+=md-heading-default
+  font-size: 1.5rem
+  margin-bottom: 1.15rem
+
+=rg-heading-default
+  font-size: 1.25rem
+  margin-bottom: 1rem
+
+=sm-heading-default
+  font-size: 1.15rem
+  margin-bottom: 0.85rem
+
+=xs-heading-default
+  font-size: 1rem
+  margin-bottom: 0.7rem
+
+=xxs-heading-default
+  font-size: 0.85rem
+  margin-bottom: 0.5rem
