--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -55,3 +55,51 @@
 
 =code
   +code-default
+
+=p($content-optimized)
+  +p-default($content-optimized)
+
+p
+  +p(false)
+
+=xxl-heading
+  +xxl-heading-default
+
+=xl-heading
+  +xl-heading-default
+
+=lg-heading
+  +lg-heading-default
+
+=md-heading
+  +md-heading-default
+
+=rg-heading
+  +rg-heading-default
+
+=sm-heading
+  +sm-heading-default
+
+=xs-heading
+  +xs-heading-default
+
+=xxs-heading
+  +xxs-heading-default
+
+h1
+  +xl-heading
+
+h2
+  +lg-heading
+
+h3
+  +md-heading
+
+h4
+  +rg-heading
+
+h5
+  +sm-heading
+
+h6
+  +xs-heading
