Documenting usage of navigation and adding highlight.js as dep
Former-commit-id: 1aabc514f7aab8529b04f429ef0e684ea2341005

--- a/lib/jade/docs/index.jade
+++ b/lib/jade/docs/index.jade
@@ -47,6 +47,8 @@ block sidebar
         li
           a(href="/docs/ui/colors") Colors
         li
+          a(href="/docs/ui/navigation") Navigation
+        li
           a(href="/docs/ui/typography") Typography
     li
       a(href="/docs/philosophy/") Philosophy
