--- a/lib/jade/_header.jade
+++ b/lib/jade/_header.jade
@@ -1,8 +1,10 @@
-nav.main-navigation
-  ul
-    li
-      a(href="/") Home
-    li
-      a(href="/docs/") Docs
-    li
-      a(href="/tests/") Tests
+.main-navigation
+  .wrapper
+    nav
+      ul
+        li
+          a(href="/") Home
+        li
+          a(href="/docs/") Docs
+        li
+          a(href="/tests/") Tests
