--- a/lib/sass/utilities/_base.sass
+++ b/lib/sass/utilities/_base.sass
@@ -26,8 +26,7 @@ $darkest-gray:   #333     // 8
 
 $space: 25px
 
-$navbarPadding:     8.5px
-$navbarItemPadding: 5px
+$navbarHeight: 40px
 
 // Other utilities
 @import _mixins
