--- a/lib/sass/kickstart.sass
+++ b/lib/sass/kickstart.sass
@@ -15,18 +15,8 @@
 
 // BUTTONS
 // -------
-.button
+.button, button
   +button
-
-// TABLES
-// ------
-.table
-  +table
-
-// TILES
-// -----
-.tile
-  +tile
 
 // FORMS
 // -----
@@ -35,3 +25,32 @@
 
 .form-group
   +form-group
+
+// GRID
+// ----
+.container
+  +container
+
+.row
+  +row
+
+// STATUS
+// ------
+
+.status-container
+  +status-bar
+
+// TABLES
+// ------
+table
+  +table
+
+// TILES
+// -----
+.tile
+  +tile
+
+// TYPOGRAPHY
+// ----------
+.readable
+  +p(true)
