--- a/lib/jade/layout.jade
+++ b/lib/jade/layout.jade
@@ -2,10 +2,11 @@ doctype html
 html(lang='en')
   head
     link(rel="stylesheet" href="/css/docs.css")
+    link(rel="stylesheet" href="/css/kickstart.css")
   body
     include _header
-    
-    .wrapper
+
+    .container
       .row
         main.mainpane
           h1 Kickstart 3
