--- a/lib/sass/_kickstart.sass
+++ b/lib/sass/_kickstart.sass
@@ -11,6 +11,7 @@
 @import components/_forms
 @import components/_nav
 @import components/_progress
+@import components/_status
 @import components/_tables
 @import components/_tiles
 @import components/_typography
