--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -1,15 +1,14 @@
 =button-default($color)
   padding: 10px 15px
-  background-color: $light-gray
+  background-color: $darker-white
   color: inherit
   border: 0px
   outline: none
   cursor: pointer
   +border-radius(3px)
-  +box-shadow(0px -3px 0px 0px rgba(0, 0, 0, 0.2) inset)
 
   &:hover
-    +box-shadow(0px 0px 0px 0px transparent inset)
+    +box-shadow(0px -3px 0px 0px rgba(0, 0, 0, 0.1) inset)
 
   &:active
-    +box-shadow(0px 3px 0px 0px rgba(0, 0, 0, 0.2) inset)
+    +box-shadow(0px 3px 0px 0px rgba(0, 0, 0, 0.1) inset)
