--- a/lib/sass/components/_tables.sass
+++ b/lib/sass/components/_tables.sass
@@ -4,6 +4,7 @@
   empty-cells: show
   border: 1px solid $light-gray
   width: 100%
+  margin-bottom: $space
 
   thead
     background: $light-gray
