--- a/lib/sass/utilities/_base.sass
+++ b/lib/sass/utilities/_base.sass
@@ -12,21 +12,31 @@
 =column($type, $offset: 0)
   +grid-column($type, $offset)
 
-$black: #333
-
-// 8 point Greyscale
-$white:          #fff     // 1
-$lightest-gray:  #eee     // 2
-$lighter-gray:   #d4d4d4  // 3
-$light-gray:     #bbb     // 4
-$gray:           #999     // 5
-$dark-gray:      #7f7f7f  // 6
-$darker-gray:    #5d5d5d  // 7
-$darkest-gray:   #333     // 8
-
 $space: 25px
 
 $navbarHeight: 40px
 
 // Other utilities
 @import _mixins
+
+// Grayscale
+
+$black:          #111
+$light-black:    #222
+$lighter-black:  #333
+$lightest-black: #444
+$darkest-gray:   #555
+$darker-gray:    #666
+$dark-gray:      #777
+$gray:           #888
+$light-gray:     #999
+$lighter-gray:   #AAA
+$lightest-gray:  #BBB
+$darkest-white:  #CCC
+$darker-white:   #DDD
+$dark-white:     #EEE
+$white:          #FFF
+
+// Rainbow
+
+$yellow:         yellow
