--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -18,3 +18,31 @@
 
 .main-navigation
   +navbar
+
+// Colors
+// Kind of shitty, but there is a colors page that directly relies on this.
+
+// TODO: Use map functions to get colors and make this a loop
+// http://sass-lang.com/documentation/Sass/Script/Functions.html
+
+.color-
+  &black
+    background-color: $black
+
+  &light-black
+    background-color: $light-black
+
+  &lighter-black
+    background-color: $lighter-black
+
+  &lightest-black
+    background-color: $lightest-black
+
+  &gray
+    background-color: $gray
+
+  &white
+    background-color: $white
+
+  &yellow
+    background-color: $yellow
