adding some tests and shtuff
Former-commit-id: e6ffb24cc56d8d0311e0985abb6f1e96fde65703

--- a/lib/jade/tests/index.jade
+++ b/lib/jade/tests/index.jade
@@ -10,4 +10,6 @@ block sidebar
   h3 Table of Contents
   ul
     li
-      a(href="./buttons") buttons
+      a(href="/tests/buttons") buttons
+    li
+      a(href="/tests/navigation") navigation
