--- a/lib/sass/components/_nav.sass
+++ b/lib/sass/components/_nav.sass
@@ -1,3 +1,5 @@
+$navbarLineHeight: $navbarHeight - 24px
+
 =navbar-default
   background: $dark-white
 
@@ -16,9 +18,6 @@
       color: rgba(0, 0, 0, 0.4)
       text-decoration: none
       cursor: pointer
-      line-height: 16px
-      padding: (($navbarHeight - 16px)/2)
-      margin: (($navbarHeight - 16px)/2) * -1
 
       &:hover
         background: rgba(0, 0, 0, 0.1)
@@ -40,4 +39,12 @@
         list-style: none
         margin: 0
         line-height: 16px
-        padding: (($navbarHeight - 16px)/2)
+        padding: (($navbarHeight - $navbarLineHeight)/2)
+
+        a, button, input
+          margin:
+            bottom: 0
+            top: 0
+          line-height: $navbarLineHeight
+          padding: (($navbarHeight - $navbarLineHeight)/2)
+          margin: (($navbarHeight - $navbarLineHeight)/2) * -1
