--- a/lib/sass/components/_typography.sass
+++ b/lib/sass/components/_typography.sass
@@ -1,3 +1,7 @@
+html
+  font-family: $default-font
+  font-size: $default-font-size
+
 =pre-default
   color: darken($blue, 25%)
   background-color: lighten($blue, 30%)
@@ -23,6 +27,7 @@
 h1, h2, h3, h4, h5, h6, p
   margin: 0
   line-height: normal
+  color: $lighter-black
 
 =xxl-heading-default
   font-size: 2rem
