Found a cool typography fix for containers
Former-commit-id: a143c58ce123d80533b293ff8ad25cf38e5eec84

--- a/lib/sass/components/_typography.sass
+++ b/lib/sass/components/_typography.sass
@@ -19,10 +19,12 @@ html
 =p-default($content-optimized)
   font-size: 1rem
   margin-bottom: 1.5rem
+  line-height: 1.4rem
 
   @if ($content-optimized)
     font-size: 1.25rem
-    line-height: 1.65rem
+    line-height: 1.75rem
+    margin-bottom: 2.5rem
 
 h1, h2, h3, h4, h5, h6, p
   margin: 0
