--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -46,3 +46,11 @@
 
   &yellow
     background-color: $yellow
+
+.example
+  padding: $space
+  margin-bottom: $space
+  background: $dark-white
+
+  *:last-child
+    margin-bottom: 0
