--- a/lib/jade/docs/ui/buttons/index.jade
+++ b/lib/jade/docs/ui/buttons/index.jade
@@ -2,8 +2,6 @@ extends ../../index
 
 block doc-article
   h4 Buttons
-  table
-    tbody
-      tr
-        td
-          button Default button
+
+  .example
+    button Default button
