--- a/lib/sass/components/_forms.sass
+++ b/lib/sass/components/_forms.sass
@@ -3,8 +3,7 @@ label
   font-weight: 500
 
 label, p, button, a
-  margin-top: ($space/2)
-  margin-bottom: ($space/5)
+  margin-bottom: $space
 
 input[type="text"],
 input[type="email"],
