--- a/lib/sass/components/_tables.sass
+++ b/lib/sass/components/_tables.sass
@@ -7,7 +7,7 @@
   margin-bottom: $space
 
   thead
-    background: $light-gray
+    background: $dark-white
     color: $black
     text-align: left
     vertical-align: bottom
