--- a/lib/jade/docs/ui/typography/index.jade
+++ b/lib/jade/docs/ui/typography/index.jade
@@ -26,3 +26,26 @@ block doc-article
   .example
     p.readable Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     p.readable Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+  h5 Decoupled
+  p While different sizes of text can be selected with the h1-h6 tags, this fringes on using HTML for styling. The level of a heading should dictate its hierarchy, but not necessarily its size.
+  p For this reason, a set of heading mixins are available that can be mixed into the heading tags. Notice in each example below, an h1 tag is used, although the sizes vary.
+
+  table
+    thead
+      tr
+        th Mixin name
+        th Implementation
+        th Sample
+    tbody
+      - for size in ['xxl', 'xl', 'lg', 'md', 'rg', 'sm', 'xs', 'xxs']
+        tr
+          td
+            code #{size}-heading()
+          td
+            pre h1.#{size}
+              |   +#{size}-heading
+              | 
+              | &lt;h1 class="#{size}"&gt;Hello World&lt;/h1&gt;
+          td
+            h1(class="example-#{size}") Hello World
