banging head against wall
Former-commit-id: f2010a30fdfad6507f0dc8f817a6dffb8e5151c0

--- a/lib/jade/layout.jade
+++ b/lib/jade/layout.jade
@@ -18,4 +18,4 @@ html(lang='en')
           block sidebar
 
     footer
-      script(src="/js/kickstrap.js")
+      script(src="/js/system.min.js")
