--- a/lib/sass/utilities/_base.sass
+++ b/lib/sass/utilities/_base.sass
@@ -18,6 +18,7 @@ $navbarHeight: 40px
 
 $default-font: 'Lato'
 $default-font-size: 16px
+$default-line-height: 1.4rem
 
 // Other utilities
 @import _mixins
