adding responsive text sizing
Former-commit-id: a9abd74e3b4aa3083f8c2996ab2184869231009f

--- a/lib/jade/docs/ui/typography/index.jade
+++ b/lib/jade/docs/ui/typography/index.jade
@@ -17,6 +17,9 @@ block doc-article
     p
       strong Strong
 
+  h5 Responsive
+  p Font sizes and line-heights are set with responsive sizing based on the viewport width. Try changing the size of this screen or view on a different-sized screen for an example.
+
   h5 Content-optimized
   p To use content-optimized default paragraph text, simply pass in&nbsp;
     code true
