--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -84,19 +84,25 @@
   +xxs-heading-default
 
 h1
-  +xl-heading
-
-h2
   +lg-heading
 
-h3
+h2
   +md-heading
 
-h4
+h3
   +rg-heading
 
-h5
+h4
   +sm-heading
 
-h6
+h5
   +xs-heading
+
+h6
+  +xxs-heading
+
+=html
+  +html-default
+
+html, li, p
+  +html
