Restructuring import scheme
Former-commit-id: 082064965ded11299e7ba2d5737b145d27be88c8

--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -4,17 +4,19 @@
  *  Generation of css for the getkickstart.com homepage.
  */
 
-// First load Kickstrap
-@import _kickstart
-
-// Then the theme
+// Choose your theme
 @import themes/_default
+
+// Now write your own Sass
 
 .mainpane
   +column('twothirds')
 
 .sidebar
   +column('third')
+
+  h1
+    +xs-heading
 
 .main-navigation
   +navbar
