--- a/lib/sass/kickstart.sass
+++ b/lib/sass/kickstart.sass
@@ -2,14 +2,11 @@
  *  Kickstart
  *  =========
  *  For users who prefer to not use Sass, this will generate a CSS file with
- *  classes for all the mixins.
+ *  classes for all the components.
  */
 
-// First load Kickstart
-@import _kickstart
-
-// Then the theme
-@import themes/_default
+// Import the semantic index
+@import kickstart-semantic
 
 // Assign mixins to static classes
 
