--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -8,6 +8,41 @@
  *  changing anything.
  */
 
+// VARIABLES
+// ---------
+
+$space: 25px
+$navbarHeight: 40px
+$scalingFactor: 0.25vw
+
+$default-font: 'Lato'
+$default-font-size: 16px
+$default-line-height: 1.4rem
+
+// Grayscale
+
+$black:          #111
+$light-black:    #222
+$lighter-black:  #333
+$lightest-black: #444
+$darkest-gray:   #555
+$darker-gray:    #666
+$dark-gray:      #777
+$gray:           #888
+$light-gray:     #999
+$lighter-gray:   #AAA
+$lightest-gray:  #BBB
+$darkest-white:  #CCC
+$darker-white:   #DDD
+$dark-white:     #EEE
+$white:          #FFF
+
+// Rainbow
+
+$yellow:         yellow
+
+@import ../utilities/index
+
 // BUTTONS
 // -------
 
@@ -104,5 +139,5 @@ h6
 =html
   +html-default
 
-html, li, p
+html, li, p, table
   +html
