--- a/lib/sass/core/_components.sass
+++ b/lib/sass/core/_components.sass
@@ -6,7 +6,7 @@
  */
 
 // Components
-@import utilities/_base
+@import core/_base
 @import components/_buttons
 @import components/_forms
 @import components/_nav
