--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -18,8 +18,8 @@
 $primary-color:       0
 $secondary-color:     0
 $space:               25px
-$heading-font-family: 'Lato'
-$body-font-family:    'Lato'
+$heading-font-family: 'Lato', helvetica neue, sans-serif
+$body-font-family:    'Lato', helvetica neue, sans-serif
 $base-font-size:      16px
 $black-augment:       0
 $white-augment:       0
