Just adding routes to the components I want to have
Former-commit-id: 71c221da5e6e47b87dca236edf152f6492ec026f

--- a/lib/jade/docs/index.jade
+++ b/lib/jade/docs/index.jade
@@ -1,10 +1,10 @@
 extends ../layout
 
 block mainpane
-  h3 Documentation
+  h1 Documentation
 
   block doc-article
-    h4 Quickstart
+    h2 Quickstart
     p Choose how you'd like to get started
     ul
       li
@@ -45,9 +45,29 @@ block sidebar
         li
           a(href="/docs/ui/buttons") Buttons
         li
+          a(href="/docs/ui/dropdowns") Dropdowns
+        li
+          a(href="/docs/ui/forms") Forms
+        li
           a(href="/docs/ui/colors") Colors
         li
+          a(href="/docs/ui/icons") Icons
+        li
+          a(href="/docs/ui/images") Images
+        li
+          a(href="/docs/ui/labels") Labels
+        li
+          a(href="/docs/ui/modals") Modals
+        li
           a(href="/docs/ui/navigation") Navigation
+        li
+          a(href="/docs/ui/notifications") Notifications
+        li
+          a(href="/docs/ui/tabs") Tabs
+        li
+          a(href="/docs/ui/tiles") Tiles
+        li
+          a(href="/docs/ui/tooltips") Tooltips
         li
           a(href="/docs/ui/typography") Typography
     li
