--- a/lib/jade/docs/ui/navigation/index.jade
+++ b/lib/jade/docs/ui/navigation/index.jade
@@ -2,9 +2,9 @@ extends ../../index
 
 block doc-article
   :markdown
-    #### Navigation
+    ## Navigation
 
-    ##### Bars
+    ### Bars
 
     Navigation bars consist of three elements:
 
@@ -32,3 +32,7 @@ block doc-article
     affect the direct descendants. The need for this separation becomes clearer
     as the navbar becomes more complex, such as the addition of a wrapper inside
     the container.
+
+    ### Breadcrumbs
+
+    ### Pagination
