--- a/lib/jade/_header.jade
+++ b/lib/jade/_header.jade
@@ -3,6 +3,8 @@
     nav
       ul
         li
+          h1 Kickstart 3
+        li
           a(href="/") Home
         li
           a(href="/docs/") Docs
