--- a/lib/sass/components/_nav.sass
+++ b/lib/sass/components/_nav.sass
@@ -23,6 +23,11 @@ $navbarLineHeight: $navbarHeight - 24px
         background: rgba(0, 0, 0, 0.1)
         color: $white
 
+    h1
+      margin-bottom: 0
+      font-size: $base-font-size
+      line-height: $default-line-height
+
     p
       margin: 0
 
