--- a/lib/jade/docs/ui/navigation/index.jade
+++ b/lib/jade/docs/ui/navigation/index.jade
@@ -33,6 +33,8 @@ block doc-article
     as the navbar becomes more complex, such as the addition of a wrapper inside
     the container.
 
+    ### Dropdowns
+
     ### Breadcrumbs
 
     ### Pagination
