--- a/lib/jade/docs/ui/typography/index.jade
+++ b/lib/jade/docs/ui/typography/index.jade
@@ -1,7 +1,7 @@
 extends ../../index
 
 block doc-article
-  h4 Typography
+  h2 Typography
   p By default, the standard set of typography tags will look like this:
 
   .example
@@ -17,10 +17,10 @@ block doc-article
     p
       strong Strong
 
-  h5 Responsive
+  h2 Responsive
   p Font sizes and line-heights are set with responsive sizing based on the viewport width. Try changing the size of this screen or view on a different-sized screen for an example.
 
-  h5 Content-optimized
+  h2 Content-optimized
   p To use content-optimized default paragraph text, simply pass in&nbsp;
     code true
     |  to&nbsp;
@@ -30,7 +30,32 @@ block doc-article
     p.readable Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     p.readable Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-  h5 Decoupled
+  pre p.readable {
+    |   @include p(true);
+    | }
+
+  h2 Headers
+  p Create spacious, dominating header lines
+
+  .example
+    header.page-heading
+      h1 How to cook a pie
+    p The first step to cooking a pie is to choose a fancy tin.
+
+  :markdown
+    ### Code
+
+        <header class="page-heading">
+          <h1>How to cook a pie</h1>
+        </header>
+        <p>The first step to cooking a pie is to choose a fancy pie tin.</p>
+
+        .page-heading {
+          @include page-heading();
+        }
+
+
+  h2 Decoupled
   p While different sizes of text can be selected with the h1-h6 tags, this fringes on using HTML for styling. The level of a heading should dictate its hierarchy, but not necessarily its size.
   p For this reason, a set of heading mixins are available that can be mixed into the heading tags. Notice in each example below, an h1 tag is used, although the sizes vary.
 
