--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block mainpane
-  article
+  article.readable
     h3 tl;dr
     p Kickstart is a front-end framework designed for clean HTML on modern browsers.
 
