--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -18,6 +18,9 @@
   h1
     +xs-heading
 
+  h2
+    +xxs-heading
+
 .main-navigation
   +navbar
 
@@ -51,10 +54,10 @@
 
 .example
   padding: $space
-  margin-bottom: $space * 2
+  margin-bottom: $space
   background: $dark-white
 
-  *:last-child
+  > *:last-child
     margin-bottom: 0
 
 // Also shitty
