--- a/lib/jade/docs/philosophy/index.jade
+++ b/lib/jade/docs/philosophy/index.jade
@@ -1,25 +1,38 @@
 extends ../index
 
 block doc-article
-  h4 Philosophy
-  p Kickstart is an effort to carve the process of website design down to its bare essentials.
-  ul
-    li
-      | Library-free
-      ul
-        li The sum total of the Kickstart product is one CSS and one JS file.
-        li No jQuery required
-    li
-      | Customizable by design
-      ul
-        li The design of the Kickstart compilation system encourages creating themes by treating component styles as extensible classes.
-    li
-      | Optimized for specific use cases.
-      ul
-        li
-          | Kickstart recognizes three main areas for website design
-          ul
-            li Applications
-            li Content
-            li Marketing
-        li Compatible in popular backend frameworks as well as plain HTML.
+  :markdown
+    ## Philosophy
+
+    Kickstart is an effort to carve the process of website design down to its bare essentials.
+
+    * Content-specific classes*
+      * Blocks and modifiers are assigned to mixins, never classes. This means
+        instead of `.navbar` or `.list-box`, you'll define classes that define
+        the content and attach the styles to them. (`.page-navigation`,
+        `.news-feed`)
+    * Lightweight
+      * The sum total of the Kickstart product is one CSS and one JS file.
+      * No jQuery required
+      * By relying mostly on Sass mixins, only the CSS you need ends up in your
+        project.*
+    * Customizable by design
+      * The design of the Kickstart compilation system encourages creating
+        themes by treating component styles as extensible classes.
+    * Optimized for specific use cases.
+      * Kickstart recognizes three main areas for website design:
+          - Applications
+          - Content
+          - Marketing
+      * Compatible in popular backend frameworks as well as plain HTML.
+    * Forward-looking
+      * Each release supports the browsers that are the latest at the time of the
+        release. As time goes on, new browsers become old. The Kickstart strategy
+        is to let older releases become the old browser compatible options as a
+        natural extension of the passing of time.
+    * Endless
+      * The components and functions of Kickstart 3 are just what you get out of
+        the box. Kickstart is designed to integrate with third-party components
+        when the standard library isn't sufficient.
+
+  p * = Applies only to using the Sass version.
