--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -56,6 +56,7 @@ $white:          #FFF
 // Rainbow
 
 $yellow:         yellow
+$blue:           blue
 
 @import ../core/index
 
@@ -104,11 +105,17 @@ $yellow:         yellow
 =pre
   +pre-default
 
+pre
+  +pre
+
 =code
   +code-default
 
 =p($content-optimized)
   +p-default($content-optimized)
+
+=page-heading
+  +page-heading-default
 
 =xxl-heading
   +xxl-heading-default
